<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Titulo"
        android:textSize="20dp"
        android:layout_marginLeft="130dp"
        android:textColor="@color/blue"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ingrese"
        android:textSize="20dp"
        />
    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/Grupo">

        <RadioButton
            android:id="@+id/radio_cuadro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cuadrado1"
            android:onClick="onRadioButtonClicked"
            android:textSize="15sp"/>
        <RadioButton
            android:id="@+id/radio_triangulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Triangulo1"
            android:onClick="onRadioButtonClicked"
            android:textSize="15sp"/>
        <RadioButton
            android:id="@+id/radio_rectangulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rectangulo1"
            android:onClick="onRadioButtonClicked"
            android:textSize="15sp"/>
        <RadioButton
            android:id="@+id/radio_circulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Circulo1"
            android:onClick="onRadioButtonClicked"
            android:textSize="15sp"/>
    </RadioGroup>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/Cuadro"
            android:visibility="invisible">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ingresalado"
                android:id="@+id/eIngresalado"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Lado1"
                android:id="@+id/eLadoCuadro"
                android:inputType="number"
                android:textSize="20sp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Resultado"
                android:id="@+id/bResultado1"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Solucion1"
                android:id="@+id/eSolucionCuadro"
                android:inputType="number"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/Triangulo"
            android:visibility="invisible">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ingresabase"
                android:id="@+id/eIngresabase"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Base1"
                android:id="@+id/eBaseTriangulo"
                android:inputType="number"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ingresaaltura"
                android:id="@+id/eIngresaaltura"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Altura1"
                android:id="@+id/eAlturaTriangulo"
                android:inputType="number"
                android:textSize="20sp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Resultado"
                android:id="@+id/bResultado2"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Solucion1"
                android:id="@+id/eSolucionTriangulo"
                android:inputType="number"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/Rectangulo"
            android:visibility="invisible">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ingresabase"
                android:id="@+id/eIngresabaseRec"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Base1"
                android:id="@+id/eBaseRectangulo"
                android:inputType="number"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ingresaaltura"
                android:id="@+id/eIngresaalturaRec"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Altura1"
                android:id="@+id/eAlturaRectangulo"
                android:inputType="number"
                android:textSize="20sp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Resultado"
                android:id="@+id/bResultado3"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Solucion1"
                android:id="@+id/eSolucionRectangulo"
                android:inputType="number"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/Circulo"
            android:visibility="invisible">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ingresaradio"
                android:id="@+id/eIngresaradio"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Radio1"
                android:id="@+id/eRadio"
                android:inputType="number"
                android:textSize="20sp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Resultado"
                android:id="@+id/bResultado4"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Solucion1"
                android:id="@+id/eSolucionCirculo"
                android:inputType="number"
                android:textSize="20sp" />
        </LinearLayout>

</RelativeLayout>

</LinearLayout>
